[package]
name = "base_type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
bytes = "1.0.1"
nom = { version = "7.1.0", features = ["alloc"] }
red-derives = { version = "0.1.0", path = "./derives" }
md-5 = "0.9.1"
sha2 = "0.9.5"
testing-utils = { version = "0.1.1", optional = true }
bstr = "0.2.17"

[features]
test-utils = ["testing-utils"]

[dev-dependencies]
quote = "1.0.9"
rand = { version = "0.8.4" }

