[package]
name = "red-derives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.65", features = ["extra-traits"] }
proc-macro2 = "1.0.27"
darling = "0.13.0"
